[tool.poetry]
name = "altvec_brain_games"
version = "0.7.7"
description = "Brain games project on hexlet"
authors = ["altvec <me@sergeykalistratov.com>"]
repository = "https://github.com/altvec/python-project-lvl1"
license = "MIT"
packages = [
    { include = "brain_games" },
]
classifiers = [
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
wemake-python-styleguide = "^0.14.0"
flake8 = "^3.8"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
